--- a/hopsworks-web/yo/app/views/newJob.html
+++ b/hopsworks-web/yo/app/views/newJob.html
@@ -301,7 +301,7 @@
         tourtip-element="#selectFileButton"
         tourtip-placement="bottom"
         tourtip-next-label="Next"
-        on-proceed="newJobCtrl.onFileSelected('SPARK','hdfs:///Projects/' + projectCtrl.currentProject.projectName + '/TestJob/spark-examples.jar')"
+        on-proceed="newJobCtrl.onFileSelected('SPARK','TestJob/spark-examples.jar')"
         tourtip-offset-vertical="-14"
         tourtip-offset-horizontal="-5"
         ng-if="newJobCtrl.accordion3.visible"
