--- a/hopsworks-web/yo/app/views/toursPanel.html
+++ b/hopsworks-web/yo/app/views/toursPanel.html
@@ -50,8 +50,20 @@
                 Cluster Datasets</a>
             <a href="https://community.hopsworks.ai" class="list-group-item">
                 <span class="glyphicon glyphicon-user"></span>
-                Need support?
-                <span class="glyphicon glyphicon-earphone pull-right" style="margin-right: 1px;"></span>
+                Hopsworks Forum
+            </a>
+            <a href="https://polartep.io/forum/c/machine-learning-for-operational-sea-ice-charting/8" class="list-group-item">
+                <span class="glyphicon glyphicon-user"></span>
+                ML for Sea Ice Forum
+            </a>
+            <a href="http://polarview.org" class="list-group-item">
+                <span></span>
+                <img alt="polar tap icon" style="margin-left:15px;" class="pull-center" height="20"
+                     src="images/polar_view.png"/>
+            </a>
+            <a href="https://www.logicalclocks.com/" class="list-group-item">
+                <span></span>
+                <img alt="logical clocks tap icon" class="pull-center" height="60" src="images/lc.png"/>
             </a>
         </div>
     </div>
